* Jul 11 2002, Kristian Van Der Vliet *

Restructure and fix libs/compat-1.0, all of the libraries are kept within a tarball in
order to preserve symlinks through the CVS Repository.

* Jul 7 2002, Kristian Van Der Vliet *

Made a few small changes to the SBPro driver, to stop it creating & holding /dev/sound/dsp
even when no SBPro is detected.

* Jul 5 2002, Kristian Van Der Vliet *

Added apm_poweroff() function from a patch Anthony Morphett < tonymorph@yahoo.com >
in kernel.c

* Jul 5 2002, Kristian Van Der Vliet *

Added shutdown.c to apps/utils/sysutils

* Jul 4 2002, Kristian Van Der Vliet *

Added the following drivers:

	Network Interface Cards:
		3c509
		3c59x
		pcnet32
		tulip

	Sound:
		emu10k1
		es1371
		sbpro
		via686a

	Video:
		mach64
		trident

* Jul 4 2002, Kristian Van Der Vliet *

Added apps/utils/mixer

* Jul 4 2002, Kristian Van Der Vliet *

Updated build-tools/mkdisttree.sh

* Jul 2 2002, Kristian Van Der Vliet *

Added the following Window Decorators:

	Beish
	Drow
	Mulvane
	Photon
	Red
	Win98

Added the following keymaps:

	Russian
	Polish

* Jun 14 2002, Kristian Van Der Vliet *

Implement get_tld(), set_tld() in process.c

